--- a/index.html
+++ b/index.html
@@ -153,42 +153,42 @@
                         <div class="flex flex-row gap-x-12 justify-center text-center font-semibold text-2xl my-10">
                             <figure>
                                 <img class="border-4 border-black dark:border-white rounded p-3"
-                                    src="https://cdn-icons-png.flaticon.com/512/888/888859.png" alt="">
+                                    src="images/html.png" alt="">
                                 <figcaption>HTML</figcaption>
                             </figure>
                             <figure>
                                 <img class="border-4 border-black dark:border-white rounded p-3"
-                                    src="https://cdn-icons.flaticon.com/png/512/802/premium/802251.png?token=exp=1656085696~hmac=5ad50f7c6e112e6f67e0b92b629fc152"
+                                    src="images/css.png"
                                     alt="">
                                 <figcaption>CSS</figcaption>
                             </figure>
 
                             <figure>
                                 <img class="border-4 border-black dark:border-white rounded p-3"
-                                    src="https://cdn-icons.flaticon.com/png/512/3097/premium/3097978.png?token=exp=1656085795~hmac=fcd7c3c816621a6de934ba7d8dcceb72"
+                                    src="images/javascript.png"
                                     alt="">
                                 <figcaption>JavaScript</figcaption>
                             </figure>
                             <figure class="lg:flex md:hidden sm:hidden xs:hidden">
                                 <img class="border-4 border-black dark:border-white rounded p-3"
-                                    src="https://cdn-icons-png.flaticon.com/512/5968/5968672.png" alt="">
+                                    src="images/bootstrap.png" alt="">
                                 <figcaption>Bootstrap</figcaption>
                             </figure>
                             <figure class="lg:flex md:hidden sm:hidden xs:hidden">
                                 <img class="border-4 border-black dark:border-white rounded p-3"
-                                    src="https://www.vectorlogo.zone/logos/tailwindcss/tailwindcss-icon.svg" alt="">
+                                    src="images/tailwind.png" alt="">
                                 <figcaption>TailwindCSS</figcaption>
                             </figure>
                         </div>
                         <div class="lg:hidden md:flex sm:flex xs:flex justify-center gap-x-12 text-center font-semibold text-2xl ">
                             <figure>
                                 <img class="border-4 border-black dark:border-white rounded p-3"
-                                    src="https://cdn-icons-png.flaticon.com/512/5968/5968672.png" alt="">
+                                    src="images/bootstrap.png" alt="">
                                 <figcaption>Bootstrap</figcaption>
                             </figure>
                             <figure>
                                 <img class="border-4 border-black dark:border-white rounded p-3"
-                                    src="https://www.vectorlogo.zone/logos/tailwindcss/tailwindcss-icon.svg" alt="">
+                                    src="images/tailwind.png" alt="">
                                 <figcaption>TailwindCSS</figcaption>
                             </figure>
                         </div>
