--- a/index.html
+++ b/index.html
@@ -214,21 +214,21 @@
             <h1 class="mb-4 text-3xl tracking-tight font-bold text-gray-900 dark:text-white">Contact Me</h1>
             <div class="flex flex-row gap-4 dark:invert">
                 <a href="tel:+917020860691" target="_blank"><img
-                        src="https://cdn-icons-png.flaticon.com/512/455/455705.png" alt=""></a>
+                        src="icons/phone.png" alt=""></a>
                 <a href="mailto:mhetreayush1719@gmail.com" target="_blank"><img
-                        src="https://cdn-icons.flaticon.com/png/512/2099/premium/2099199.png?token=exp=1656096798~hmac=8aa5568f12fa8fab8e70284a2276c817"
+                        src="icons/email.png"
                         alt=""></a>
             </div>
             <div class="flex flex-row gap-4 dark:invert ">
                 <a href="https://www.linkedin.com/in/ayush-mhetre-662709227/" target="_blank">
-                    <img src="https://cdn-icons-png.flaticon.com/512/1384/1384046.png" alt="">
+                    <img src="icons/linkedin.png" alt="">
                 </a>
                 <a href="https://github.com/mhetreayush" target="_blank">
-                    <img src="https://cdn-icons.flaticon.com/png/512/3291/premium/3291695.png?token=exp=1656096737~hmac=a945cd44ed52b648dc911233ea1817fd"
+                    <img src="icons/github.png"
                         alt="">
                 </a>
                 <a href="https://www.instagram.com/mhetre__ayush/" target="_blank">
-                    <img src="https://cdn-icons-png.flaticon.com/512/1400/1400829.png" alt="">
+                    <img src="icons/insta.png" alt="">
                 </a>
             </div>
             <h3 class="dark:text-gray-400 text-gray-400">Illustrations used from Freepik & Flaticon</h3>
