--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
     <div id="splashScreen" class="h-screen w-screen bg-white absolute z-50 flex flex-col justify-center items-center">
         <div>
-            <h1 class="text-9xl font-extrabold">Ayush Mhetre</h1>
+            <h1 class="text-7xl font-extrabold">Ayush Mhetre</h1>
         </div>
-        <div class="flex flex-row gap-10 pt-5 lg:flex md:hidden sm:hidden">
+        <div class="flex flex-row gap-10 pt-5 lg:flex md:hidden sm:hidden xs:hidden">
             <div class="flex flex-col justify-center items-center">
                 <div>
                 <h1 class="border-4 dark:border-white dark:text-white p-3 rounded text-lg font-extrabold text-gray-400">W</h1>
@@ -150,7 +150,7 @@
                 </div>
                 <div class="dark:text-white dark:bg-gray">
                     <div class="flex flex-col justify-center gap-y-5">
-                        <div class="flex flex-row gap-x-12 justify-center text-center font-semibold text-2xl my-10">
+                        <div class="flex lg:flex-row md:flex-row sm:flex-col xs:flex-col flex-row gap-x-12 justify-center text-center font-semibold text-2xl my-10">
                             <figure>
                                 <img class="border-4 border-black dark:border-white rounded p-3"
                                     src="images/html.png" alt="">
@@ -180,7 +180,7 @@
                                 <figcaption>TailwindCSS</figcaption>
                             </figure>
                         </div>
-                        <div class="lg:hidden md:flex sm:flex xs:flex justify-center gap-x-12 text-center font-semibold text-2xl ">
+                        <div class="flex lg:hidden md:flex sm:flex-col xs:flex-col justify-center gap-x-12 text-center font-semibold text-2xl ">
                             <figure>
                                 <img class="border-4 border-black dark:border-white rounded p-3"
                                     src="images/bootstrap.png" alt="">
