--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <header class="sticky top-0 z-40">
         <nav class="bg-gray-200 border-gray-200 px-10 py-2.5 dark:bg-gray-800">
             <div class="container flex flex-wrap justify-between items-center">
-                <a href="https://flowbite.com/" class="flex items-center">
+                <a href="#Me" class="flex items-center">
                     <h1
                         class="font-extrabold text-2xl mr-2 dark:text-white box-border border-black dark:border-white border-4 p-1 rounded">
                         AM</h1>
