REACT and airbnb added

--- a/index.html
+++ b/index.html
@@ -143,14 +143,16 @@
         </section>
 
         <!-- Skills -->
-        <section class="flex flex-col gap-y-10 pt-16" id="skillsAndProjects">
+        <section class="flex flex-col gap-y-10 pt-16 mb-10" id="skillsAndProjects">
             <section class="flex flex-col items-center justify-center">
                 <div>
                     <h2 class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white">Skills</h2>
                 </div>
-                <div class="dark:text-white dark:bg-gray">
+                <div class="dark:text-white dark:bg-gray text-center">
                     <div class="flex flex-col justify-center gap-y-5">
-                        <div class="flex lg:flex-row md:flex-row sm:flex-col xs:flex-col flex-row gap-x-12 justify-center text-center font-semibold text-2xl my-10">
+                        <div class="border-2 rounded-md py-3 px-6">
+                            <h1 class="text-2xl font-extrabold">Languages</h1>
+                        <div class="flex lg:flex-row md:flex-row sm:flex-col xs:flex-col flex-row gap-x-12 gap-y-5 justify-center font-semibold text-2xl my-10">
                             <figure>
                                 <img class="border-4 border-black dark:border-white rounded p-3"
                                     src="images/html.png" alt="">
@@ -169,29 +171,29 @@
                                     alt="">
                                 <figcaption>JavaScript</figcaption>
                             </figure>
-                            <figure class="lg:flex md:hidden sm:hidden xs:hidden">
+                        </div>
+                    </div>
+                        <div class="border-2 rounded-md py-3 px-6">
+                            <h1 class="text-2xl font-extrabold">Frameworks & Libraries</h1>
+                        <div class="flex lg:flex-row md:flex-row sm:flex-col xs:flex-col flex-row gap-x-12 gap-y-5 justify-center font-semibold text-2xl my-10">
+                            <figure>
                                 <img class="border-4 border-black dark:border-white rounded p-3"
-                                    src="images/bootstrap.png" alt="">
-                                <figcaption>Bootstrap</figcaption>
+                                    src="images/react.png" alt="">
+                                <figcaption>REACT</figcaption>
                             </figure>
-                            <figure class="lg:flex md:hidden sm:hidden xs:hidden">
+                            <figure>
                                 <img class="border-4 border-black dark:border-white rounded p-3"
-                                    src="images/tailwind.png" alt="">
+                                src="images/tailwind.png" alt="">
                                 <figcaption>TailwindCSS</figcaption>
                             </figure>
-                        </div>
-                        <div class="flex lg:hidden md:flex sm:flex-col xs:flex-col justify-center gap-x-12 text-center font-semibold text-2xl ">
                             <figure>
                                 <img class="border-4 border-black dark:border-white rounded p-3"
                                     src="images/bootstrap.png" alt="">
                                 <figcaption>Bootstrap</figcaption>
                             </figure>
-                            <figure>
-                                <img class="border-4 border-black dark:border-white rounded p-3"
-                                    src="images/tailwind.png" alt="">
-                                <figcaption>TailwindCSS</figcaption>
-                            </figure>
                         </div>
+                    </div>
+                </div>
                     </div>
 
                 </div>
@@ -203,7 +205,7 @@
                     </h2>
                 </div>
                 <div class="dark:text-white dark:bg-gray flex justify-center">
-                    <div class="flex flex-col justify-center gap-y-10" id="projectCardHolder">
+                    <div class="flex lg:flex-row md:flex-row justify-center sm:flex-col xs:flex-col gap-y-10 gap-x-12" id="projectCardHolder">
                         
 
                     </div>
