--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div>
             <h1 class="text-7xl font-extrabold">Ayush Mhetre</h1>
         </div>
-        <div class="flex flex-row gap-10 pt-5 lg:flex md:hidden sm:hidden xs:hidden">
+        <div class="flex-row gap-10 pt-5 md:flex hidden">
             <div class="flex flex-col justify-center items-center">
                 <div>
                 <h1 class="border-4 dark:border-white dark:text-white p-3 rounded text-lg font-extrabold text-gray-400">W</h1>
@@ -152,7 +152,7 @@
                     <div class="flex flex-col justify-center gap-y-5">
                         <div class="border-2 rounded-md py-3 px-6">
                             <h1 class="text-2xl font-extrabold">Languages</h1>
-                        <div class="flex lg:flex-row md:flex-row sm:flex-col xs:flex-col flex-row gap-x-12 gap-y-5 justify-center font-semibold text-2xl my-10">
+                        <div class="flex md:flex-row flex-col gap-x-12 gap-y-5 justify-center font-semibold text-2xl my-10">
                             <figure>
                                 <img class="border-4 border-black dark:border-white rounded p-3"
                                     src="images/html.png" alt="">
@@ -175,7 +175,7 @@
                     </div>
                         <div class="border-2 rounded-md py-3 px-6">
                             <h1 class="text-2xl font-extrabold">Frameworks & Libraries</h1>
-                        <div class="flex lg:flex-row md:flex-row sm:flex-col xs:flex-col flex-row gap-x-12 gap-y-5 justify-center font-semibold text-2xl my-10">
+                        <div class="flex md:flex-row flex-col gap-x-12 gap-y-5 justify-center font-semibold text-2xl my-10">
                             <figure>
                                 <img class="border-4 border-black dark:border-white rounded p-3"
                                     src="images/react.png" alt="">
@@ -205,7 +205,7 @@
                     </h2>
                 </div>
                 <div class="dark:text-white dark:bg-gray flex justify-center">
-                    <div class="flex lg:flex-row md:flex-row justify-center sm:flex-col xs:flex-col gap-y-10 gap-x-12" id="projectCardHolder">
+                    <div class="flex md:flex-row justify-center flex-col gap-y-10 gap-x-12" id="projectCardHolder">
                         
 
                     </div>
